--- a/src/TaskList/Task/Task.module.css
+++ b/src/TaskList/Task/Task.module.css
@@ -1,5 +1,5 @@
 .task{
-    background-color: #AFAFAF;
+    background-color: #5a5a5a;
     display: flex;
     align-items: center;
     width: 100%;
@@ -8,10 +8,11 @@
     box-shadow:0 0 5px 0 rgba(0, 0, 0, 0.25);
     transition:box-shadow 0.2s,background-color 0.2s ;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 .task:hover{
     box-shadow:0 10px 20px 0 rgba(0, 0, 0, 0.24);
-    background-color: #bababa;
+    background-color: #636363;
 }
 .task:hover .radio{
     box-shadow: inset 0 10px 20px 0 rgba(0, 0, 0, 0.24);
