--- a/src/TodoPanel/TodoPanel.module.css
+++ b/src/TodoPanel/TodoPanel.module.css
@@ -12,7 +12,7 @@
 }
 .addPanel span:hover{box-shadow: 0 5px 15px 0 rgba(0, 0, 0, 0.34);}
 .addPanel input{
-    background-color: #4b4b4b;
+    background-color: #4b4b4b !important;
     width: calc(100% - 20px);
     height: 50px;
     border: 0;
@@ -29,4 +29,11 @@
 .wrapper{
     margin: 100px auto;
     max-width:300px  ;
+}
+.task p{
+    margin: 0;
+}
+.wrapper summary{
+    padding: 0 0 10px;
+    user-select: none;
 }
