--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
 body{
-}
-body {
 
   margin: 0;
   /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
@@ -12,4 +10,14 @@ body {
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+h1,h2,h3,h4,h5,h6,p,a,li,summary,button,input,textarea{
+  color: #c7acac;
+}
+h1,h2,h3,h4,h5,h6{
+  font-family: -apple-system;
+}
+input,textarea{
+  font-size: 1rem;
+  font-family: HelveticaNeueCyr, sans-serif;
 }
