--- a/src/SettingsPanel/SettingsPanel.module.css
+++ b/src/SettingsPanel/SettingsPanel.module.css
@@ -11,11 +11,14 @@
     height: 100%;
 }
 .NotFade{
-    animation: fade reverse forwards 1s;
+    transform: translateX(0);
+    transition: 0.5s transform, opacity 0.5s;
 }
 .fade{
-    animation: fade forwards 1s;
+    transform: translateX(-800px);
+    transition: 0.5s transform, 0.5s opacity;
 }
+
 .panel button{
     background-color: #5a5a5a;
     border: none;
@@ -55,7 +58,26 @@
     resize: vertical;
     width: calc(100% - 40px);
 }
+textarea::-webkit-scrollbar {
+    width: .5em;
+    border-radius: 100px;
+}
+
+textarea::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+    border-radius: 100px;
+
+}
+
+textarea::-webkit-scrollbar-thumb {
+    border-radius: 100px;
+
+    background-color: #6a6a6a;
+    outline: none;
+    color:#575757;
+}
 @keyframes fade {
     from{transform: translateX(0)}
     to{transform: translateX(-800px)}
+
 }
