--- a/src/TodoPanel/TaskList/Task/Task.module.css
+++ b/src/TodoPanel/TaskList/Task/Task.module.css
@@ -55,6 +55,7 @@
 .completed{
     composes: radio;
 }
+
 .settingsOpen{
     position: absolute;
     right: 0;
@@ -62,4 +63,23 @@
     bottom: 0;
     left: 30px;
 
+}
+
+/*----------*/
+.selected .completed:after{
+    box-shadow:0 10px 20px 0 rgba(0, 0, 0, 0.44);
+    background-color: #767676;
+}
+.selected .radio{
+    box-shadow: inset 0 10px 20px 0 rgba(0, 0, 0, 0.24);
+}
+.selected {
+    box-shadow:0 10px 30px 0 rgba(0, 0, 0, 0.3);
+    background-color: #666666;
+}
+.selected:hover{
+    background-color: #727272;
+}
+.selected p{
+    color: #d5c3c3;
 }
