--- a/src/PomodoroPanel/PomodoroPanel.module.css
+++ b/src/PomodoroPanel/PomodoroPanel.module.css
@@ -10,6 +10,19 @@
   padding: 30px;
   height: 100%;
 }
+.close__btn{
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+.NotFade{
+  transform: translateX(0);
+  transition: 0.5s transform, opacity 0.5s;
+}
+.fade{
+  transform: translateX(800px);
+  transition: 0.5s transform, 0.5s opacity;
+}
 .panel>div>div>button:last-child{
   height: 100px;
   font-size: 2rem;
