--- a/src/SettingsPanel/SettingsPanel.module.css
+++ b/src/SettingsPanel/SettingsPanel.module.css
@@ -18,7 +18,12 @@
     transform: translateX(-800px);
     transition: 0.5s transform, 0.5s opacity;
 }
+.close__btn{
+    position: absolute;
+    top: 10px;
+    right: 10px;
 
+}
 .panel button{
     background-color: #5a5a5a;
     border: none;
