--- a/src/PomodoroPanel/PomodoroPanel.module.css
+++ b/src/PomodoroPanel/PomodoroPanel.module.css
@@ -14,6 +14,9 @@
   position: absolute;
   top: 10px;
   left: 10px;
+  width: 20px;
+  cursor: pointer;
+
 }
 .NotFade{
   transform: translateX(0);
