--- a/src/SettingsPanel/SettingsPanel.module.css
+++ b/src/SettingsPanel/SettingsPanel.module.css
@@ -22,7 +22,8 @@
     position: absolute;
     top: 10px;
     right: 10px;
-
+    width: 20px;
+    cursor: pointer;
 }
 .panel button{
     background-color: #5a5a5a;
