--- a/src/TodoPanel/Task/Task.module.css
+++ b/src/TodoPanel/Task/Task.module.css
@@ -12,7 +12,7 @@
     margin-bottom: 10px;
     overflow-wrap: break-word;
 }
-.task p{
+.task .taskText{
     padding-right:20px ;
     max-width: 220px;
 
@@ -23,6 +23,17 @@
 }
 .task:hover .radio{
     box-shadow: inset 0 10px 20px 0 rgba(0, 0, 0, 0.24);
+}
+.taskTime{
+    position: absolute;
+    font-size: 14px;
+    top: -10px;
+    right: 6px;
+    opacity: .7;
+    transition: 0.1s opacity;
+}
+.task:hover .taskTime{
+    opacity: 0;
 }
 .cross{
     opacity: 0;
