--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,10 @@
+@font-face {
+  font-family: 'Cubano Normal';
+  src: local('Cubano Normal'), local('Cubano Normal'),
+  url('./fonts/Cubano.ttf') format('truetype');
+  font-weight: 200;
+  font-style: normal;
+}
 body{
   margin: 0;
   /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
@@ -14,7 +21,7 @@ h1,h2,h3,h4,h5,h6,p,a,li,summary,button,input,textarea{
   color: #c7acac;
 }
 h1,h2,h3,h4,h5,h6{
-  font-family: -apple-system;
+  font-family: "Cubano Normal", sans-serif;
 }
 input,textarea{
   font-size: 1rem;
