--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,9 @@
   font-weight: 200;
   font-style: normal;
 }
+
 body{
+  overflow: hidden;
   margin: 0;
   /*font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',*/
   /*  'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',*/
